@@ -21,7 +21,6 @@ package com.edp2021c1.randomseatgenerator.util;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.text.SimpleDateFormat;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Random;
@@ -47,11 +46,10 @@ public class Strings {
      * Simple date format
      */
     private static final SimpleDateFormat defaultDateFormat = new SimpleDateFormat("yyyy-MM-dd HH:mm:ss.SSS");
-    private static final List<Character> CHARACTERS_AND_DIGITS = Arrays.asList(
+    private static final List<Character> CHARACTERS_AND_DIGITS = List.of(
             'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z',
             'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z',
-            '0', '1', '2', '3', '4', '5', '6', '7', '8', '9'
-    );
+            '0', '1', '2', '3', '4', '5', '6', '7', '8', '9');
 
     /**
      * Don't let anyone else instantiate this class.
